# azure-workshops

./: .gitignore  .gitmodules  README.md  variables.tf
.devcontainer/: devcontainer.json
d-aca/: README.md  guide.sh
d-aca-sessions/: README.md  agent.py  input_files.py  people.csv  plot.py  requirements.txt  simple.py
d-ai-app-patterns/: README.md
d-ai-app-patterns/scalable_chat/src/front_service/: Dockerfile  README.md  main.py  pyproject.toml
d-ai-app-patterns/scalable_chat/src/history_api/: Dockerfile  README.md  main.py  pyproject.toml
d-ai-app-patterns/scalable_chat/src/history_worker/: Dockerfile  README.md  main.py  pyproject.toml
d-ai-app-patterns/scalable_chat/src/llm_worker/: Dockerfile  README.md  main.py  pyproject.toml  system_prompt.j2
d-ai-app-patterns/scalable_chat/src/memory_api/: Dockerfile  README.md  main.py  pyproject.toml  test.http
d-ai-app-patterns/scalable_chat/src/memory_worker/: README.md  main.py  pyproject.toml
d-ai-app-patterns/scalable_chat/src/sse_service/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
d-ai-async/: README.md
d-ai-browser-use/: README.md  main.py  requirements.txt
d-ai-content-understanding/: README.md  configure.http  convert_to_markdown.py  custom_analyzer.json  friends_results.json  friends_results.md  results.json  results.md
d-ai-dynamic-ui/: .sesskey  README.md  main.py  pyproject.toml
d-ai-sentiment/: .env.example  README.md  compare_training_results.py  config.yaml  dataset_stats.py  dataset_trim.py  llm_ft_mini_fewshot_100.py  llm_ft_mini_zeroshot.py  llm_ft_nano_fewshot_100.py  llm_ft_nano_zeroshot.py  llm_mini_fewshot_100.py  llm_mini_fewshot_1000.py  llm_mini_zeroshot.py  llm_nano_fewshot_100.py  llm_nano_fewshot_1000.py  llm_nano_zeroshot.py  prepare_training_embeddings.py  prepare_training_files.py  pyproject.toml  test_bert.py  test_lr_100.py  test_lr_1000.py  test_lr_all.py  train_bert.py  train_bert_full.py  train_lr_100.py  train_lr_1000.py  train_lr_all.py  trim_config.yaml
d-ai-sentiment/dataset/: README.md  test_df.csv  train_df.csv  val_df.csv
d-ai-sentiment/models/: .gitignore  lr_model_100.pkl  lr_model_1000.pkl  lr_model_all.pkl
d-ai-sentiment/results/: README.md  bert_sentiment_results_20250626_152802.csv  bert_sentiment_results_20250626_152802.txt  bert_training_report_20250626_150745.txt  bert_training_report_20250626_150745_summary.json  finetune_mini_training.txt  finetune_nano_training.txt  llm_ft_mini_fewshot_100_results_20250626_112123.csv  llm_ft_mini_fewshot_100_results_20250626_112123.txt  llm_ft_mini_zeroshot_results_20250626_112041.csv  llm_ft_mini_zeroshot_results_20250626_112041.txt  llm_ft_nano_fewshot_100_results_20250626_111518.csv  llm_ft_nano_fewshot_100_results_20250626_111518.txt  llm_ft_nano_zeroshot_results_20250626_111429.csv  llm_ft_nano_zeroshot_results_20250626_111429.txt  llm_mini_fewshot_1000_results_20250625_145218.csv  llm_mini_fewshot_1000_results_20250625_145218.txt  llm_mini_fewshot_100_results_20250625_145214.csv  llm_mini_fewshot_100_results_20250625_145214.txt  llm_mini_zeroshot_results_20250625_145209.csv  llm_mini_zeroshot_results_20250625_145209.txt  llm_nano_fewshot_1000_results_20250625_145219.csv  llm_nano_fewshot_1000_results_20250625_145219.txt  llm_nano_fewshot_100_results_20250625_145214.csv  llm_nano_fewshot_100_results_20250625_145214.txt  llm_nano_zeroshot_results_20250625_145211.csv  llm_nano_zeroshot_results_20250625_145211.txt  lr_training_stats_100.txt  lr_training_stats_1000.txt  lr_training_stats_all.txt  test_lr_1000_results_20250626_103523.csv  test_lr_1000_results_20250626_103523.txt  test_lr_100_results_20250626_101451.csv  test_lr_100_results_20250626_101451.txt  test_lr_all_results_20250626_110439.csv  test_lr_all_results_20250626_110439.txt
d-ai-sentiment/train/: default.csv  train_100.csv  train_1000.csv  train_all.csv
d-ai-sentiment/utils/: __init__.py  analysis_utils.py  bert_utils.py  config_utils.py  data_utils.py  llm_utils.py  training_utils.py
d-ai-token-visualizer/llm_service/: .dockerignore  .env.example  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  install.ps1  install.sh  main.py  pyproject.toml  test_service.py
d-ai-token-visualizer/llm_service/api/: __init__.py  routes.py  schemas.py
d-ai-token-visualizer/llm_service/config/: __init__.py  settings.py
d-ai-token-visualizer/llm_service/models/: __init__.py  gemma_model.py
d-ai-token-visualizer/llm_service/utils/: __init__.py  model_utils.py
d-ai-token-visualizer/token_visualizer/: .env.example  .gitignore  __init__.py  pyproject.toml  rxconfig.py  token_visualizer.py
d-ai-token-visualizer/token_visualizer/components/: __init__.py  layout.py  navigation.py  probability_bar.py  token_display.py
d-ai-token-visualizer/token_visualizer/pages/: __init__.py  config_test.py  probability_bar_test.py  token_display_test.py
d-ai-token-visualizer/token_visualizer/services/: azure_openai.py
d-ai-token-visualizer/token_visualizer/state/: __init__.py  api_test_state.py  token_state.py  ui_state.py
d-ai-token-visualizer/token_visualizer/token_visualizer/: __init__.py  token_visualizer.py
d-ai-token-visualizer/token_visualizer/token_visualizer/components/: __init__.py  color_coded_text.py  layout.py  navigation.py  probability_bar.py  token_display.py  token_tree.py
d-ai-token-visualizer/token_visualizer/token_visualizer/pages/: config_test.py  help.py  interactive_mode.py  probability_bar_test.py  prompt_comparison.py  state_test.py  token_display_test.py  token_tree.py  tree_visualization_test.py
d-ai-token-visualizer/token_visualizer/token_visualizer/services/: __init__.py  llm_client.py  local_llm.py
d-ai-token-visualizer/token_visualizer/token_visualizer/state/: __init__.py  api_test_state.py  base_state.py  settings_state.py  token_state.py  tree_state.py
d-ai-token-visualizer/token_visualizer/token_visualizer/utils/: __init__.py  config.py  tree_structure.py
d-ai-token-visualizer/token_visualizer/utils/: config.py
d-apim-genai/testapp/: main.py  pyproject.toml  requirements.txt
docs/: test.md  (+12 more)
(+1291 files in other folders)
