[project]
name = "d-ai-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.91.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "azure-identity>=1.15.0",
]
