[project]
name = "d-ai-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.91.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "azure-identity>=1.15.0",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "psutil>=6.0.0",
    "joblib>=1.3.0",
]
