[project]
name = "d-ai-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.91.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "azure-identity>=1.15.0",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "psutil>=6.0.0",
    "joblib>=1.3.0",
    # PyTorch with CUDA support (installed from PyTorch index)
    "torch",
    "torchvision", 
    "torchaudio",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "evaluate>=0.4.0",
    # Additional dependencies for PyTorch and transformers
    "sympy>=1.12.0",
    "sentencepiece>=0.1.99",
]

# Configure PyTorch CUDA index for Windows
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

# Configure PyTorch packages to use CUDA index
[[tool.uv.dependency-metadata]]
name = "torch"
index = "pytorch-cu128"

[[tool.uv.dependency-metadata]]
name = "torchvision" 
index = "pytorch-cu128"

[[tool.uv.dependency-metadata]]
name = "torchaudio"
index = "pytorch-cu128"
