[project]
name = "d-ai-token-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflex>=0.7.14",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.42.0",
    "python-dotenv>=1.1.1",
    "huggingface_hub>=0.20.0",
    "openai>=1.93.0",
    "azure-identity>=1.23.0",
    "httpx>=0.27.0",
    "plotly>=5.0.0",
    "networkx>=3.5",
]
