[project]
name = "testapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core-tracing-opentelemetry>=1.0.0b12",
    "azure-identity>=1.23.0",
    "azure-monitor-opentelemetry>=1.6.10",
    "openai>=1.85.0",
    "opentelemetry-api>=1.31.1",
    "opentelemetry-instrumentation-fastapi>=0.52b1",
    "opentelemetry-instrumentation-openai-v2>=2.1b0",
    "opentelemetry-instrumentation-requests>=0.52b1",
    "opentelemetry-sdk>=1.31.1",
    "python-dotenv>=1.1.0",
]
