[project]
name = "scalable-chat-history-worker"
version = "0.1.0"
description = "History worker service for scalable chat using Azure Service Bus and Cosmos DB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "azure-identity>=1.20.0",
    "azure-monitor-opentelemetry>=1.6.7",
    "azure-servicebus==7.14.2",
    "azure-cosmos>=4.8.0",
    "opentelemetry-instrumentation-fastapi>=0.54b1",
    "opentelemetry-sdk>=1.33.1",
    "python-dotenv==1.1.0",
    "azure-ai-inference>=1.0.0b3",
    "redis>=5.0.0",
    "redis-entraid>=1.0.0",
]