# filepath: c:\git\azure-workshops\d-ai-app-patterns\scalable_chat\src\llm_worker\pyproject.toml
[project]
name = "scalable-chat-worker"
version = "0.1.0"
description = "Worker service for scalable chat using Azure Service Bus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity==1.23.0",
    "azure-servicebus==7.14.2",
    "python-dotenv==1.1.0",
]
