[project]
name = "scalable-chat-memory-worker"
version = "0.1.0"
description = "Memory worker service for scalable chat - extracts and stores user memories from completed conversations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "azure-identity>=1.20.0",
    "azure-monitor-opentelemetry>=1.6.7",
    "azure-servicebus==7.14.2",
    "opentelemetry-instrumentation-fastapi>=0.54b1",
    "opentelemetry-sdk>=1.33.1",
    "python-dotenv==1.1.0",
    "azure-ai-inference>=1.0.0b3",
    "redis>=5.0.0",
    "redis-entraid>=1.0.0",
    "azure-cosmos>=4.8.0",
    "pydantic>=2.11.5",
]
